page content overlapping fixed

--- a/src/app/header/header.css
+++ b/src/app/header/header.css
@@ -1,3 +1,11 @@
-nav {
-  border-bottom: 2px solid #444;
+.header-box {
+  width: 100%;
+  height: 50px;
+  background-color: #3498db;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 16px;
 }
